beginning of raspberry registration added

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 project(server)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(server main.cpp)
+link_libraries(pthread)
+
+add_executable(server main.cpp Server.cpp Server.h exceptions.h Packet.cpp Packet.h Const.h)
