--- a/rpi/devices.conf
+++ b/rpi/devices.conf
@@ -1,7 +1,8 @@
-lig 21 -0 n 'swiatlo duzy pokoj'
+lig 21 -0 y 'light living room'
 new 12 -0 t 'new haha'
 shd 5 6 'rolety'
 shd 5s 6 'no intiger pin val'
-lig 20 'swiatlo inne'
+lig 20 'light other'
 lig dwa '2!'
 lig 15 -0 f 'zly 0 triggered'
+thm 10 'inside temp'
